--- a/frontend/src/website/styles.css
+++ b/frontend/src/website/styles.css
@@ -100,13 +100,13 @@
 }
 
 .header-btn2 {
-    border: 2px solid #fdb10e;
+    border: 2px solid #ffffff;
     background: transparent;
     height: 45px;
     width: 15vw;
     font-size: 18px;
     font-weight: lighter;
-    color: #fdb10e;
+    color: #ffffff;
     border-radius: 8px;
 }
 
