--- a/frontend/src/partials/styles.css
+++ b/frontend/src/partials/styles.css
@@ -126,16 +126,55 @@
     justify-content: flex-end;
 }
 
-.logout-btn {
-
+.popover-header {
     /* border: 1px solid orange; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.popover-header p {
+    font-size: 13px;
+    color: #444444;
+}
+.popover-header p:nth-of-type(2) {
+    font-size: 12px;
+    color: #666666;
+}
+
+.popover-btn {
     border: none;
-    background: transparent;
     display: flex;
     flex-direction: row;
+    justify-content: flex-start;
+    width: 100%;
+    color: #6e6e6e;
+    font-size: 14px;
+    box-shadow: none;
+}
+.popover-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
     gap: 5px;
+    margin-top: 10px;
+}
+.popover-footer a {
+    font-size: 10px;
+    color: #888888;
+}
+
+.logout-btn {
+    /* border: 1px solid orange; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
     cursor: default;
-    margin-left: 20px;
+    width: 100%;
+    color: #6e6e6e;
+    font-size: 14px;
 }
 
 
@@ -240,8 +279,8 @@
     background: none;
     appearance: none;
     color: #fdb10e;
-    font-size: 15px;
-    letter-spacing: 1px;
+    font-size: 1rem;
+    margin-left: 10px;
     padding: 5px 20px;
     width: 120px;
     height: 40px;
@@ -269,6 +308,19 @@
     color: #ffffff;
     cursor: pointer;
     font-size: 16px;
+}
+
+.nav-auth-btn4 {
+    border: 1px solid #ffffff;
+    background: none;
+    appearance: none;
+    color: #ffffff;
+    font-size: 1rem;
+    margin-left: 10px;
+    padding: 5px 20px;
+    width: 120px;
+    height: 40px;
+    border-radius: 10rem;
 }
 
 
