--- a/frontend/src/partials/styles.css
+++ b/frontend/src/partials/styles.css
@@ -125,6 +125,27 @@
     align-items: center;
     justify-content: flex-end;
 }
+.topbar-container-right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+}
+
+.notification-item {
+    /* border: 1px solid orange; */
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    padding: 5px;
+    transition: background 0.3s ease-in-out;
+    border-radius: 8px;
+}
+.notification-item:hover {
+    background: rgba(240, 240, 240, 0.8);
+    cursor: pointer;
+}
 
 .popover-header {
     /* border: 1px solid orange; */
@@ -163,6 +184,7 @@
     font-size: 10px;
     color: #888888;
 }
+
 
 .logout-btn {
     /* border: 1px solid orange; */
