--- a/frontend/src/auth/styles.css
+++ b/frontend/src/auth/styles.css
@@ -55,7 +55,8 @@
 }
 
 .inputField {
-    height: 40px;
+    width: 100%;
+    height: 50px;
     margin: 5px 0;
 }
 
@@ -72,11 +73,11 @@
 }
 
 .auth-btn1 {
-    background: #111241;
+    background: #fdb10e !important;
     border: none;
     color: #ffffff;
     font-size: 15px;
-    border-radius: 10px;
+    border-radius: 8px;
     margin-top: 5px;
     transition: all 0.2s ease-in-out;
 }
@@ -86,7 +87,7 @@
     /* background: #fdb10e; */
     color: #2e2e2e;
     font-size: 15px;
-    border-radius: 10px;
+    border-radius: 8px;
     transition: all 0.2s ease-in-out;
     display: flex;
     flex-direction: row;
@@ -102,4 +103,24 @@
 
 .ant-checkbox:hover .ant-checkbox-inner {
     border-color: #111241;
+}
+
+@media (max-width: 768px) {
+    .auth-container {
+        /* border: 1px solid orange; */
+        width: 90%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .card:nth-child(1) {
+        display: none;
+    }
+    .card:nth-child(2) {
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        padding: 20px 25px;
+    }
 }
