--- a/frontend/src/website/styles.css
+++ b/frontend/src/website/styles.css
@@ -25,8 +25,8 @@
 }
 
 .header-card h1 {
-  font-size: 4.5rem;
-  line-height: 80px;
+  font-size: clamp(3rem, 5vw, 4rem); /* Fluid font size */
+  line-height: 70px;
   margin: 0;
   margin-bottom: 20px;
   width: 50vw;
@@ -202,7 +202,7 @@
   }
 
   .header-abt-card {
-    margin-top: 20vh;
+    margin-top: 15vh;
   }
 
   .header-ppt-card {
@@ -220,7 +220,7 @@
   }
 
   .header-card h1 {
-    font-size: 3.5rem;
+    font-size: clamp(3rem, 5vw, 4rem);
     line-height: 70px;
     margin: 0;
     margin-bottom: 10px;
@@ -228,12 +228,17 @@
     text-align: center;
   }
   .header-ppt-card h1 {
-    font-size: 3.5rem;
+    font-size: clamp(3rem, 5vw, 4rem);
     line-height: 60px;
     margin: 0;
     margin-bottom: 10px;
     width: 100%;
     text-align: center;
+  }
+  .header-la-card h1 {
+    font-size: clamp(3rem, 5vw, 4rem);
+    margin-bottom: 0;
+    line-height: 3.5rem;
   }
   .header-card p {
     font-size: 1rem;
@@ -1027,7 +1032,7 @@
 
   .ach-card:nth-of-type(1) {
     /* border: 1px solid orange; */
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(160px, 1fr));
     gap: 10px;
     width: 90vw;
@@ -1526,9 +1531,7 @@
 }
 
 @media (max-width: 780px) {
-  .wcu-container {
-    margin-top: -5vh;
-  }
+
   .wcu-container > h1,
   .hiw-container > h1 {
     margin-bottom: 10px !important;
@@ -1579,7 +1582,7 @@
 
 .main-content {
   /* border: 1px solid orange; */
-  margin-bottom: 5rem;
+  margin-bottom: 1rem;
   flex: 2;
 }
 
@@ -1676,14 +1679,16 @@
 }
 
 .spec-grid {
+  border: 1px solid orange;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 6rem);
   gap: 20px;
   margin: 20px 0;
 }
 
 .spec-item {
-  text-align: center;
+  border: 1px solid orange;
+  text-align: left;
   padding: 15px;
   background: #f8f9fa;
   border-radius: 8px;
@@ -1748,7 +1753,10 @@
 /* Responsive Design */
 @media (max-width: 768px) {
   .property-detail-container {
+    border: 1px solid orange;
     flex-direction: column;
+    width: 90vw;
+    padding: 0;
   }
 
   .thumbnail-grid {
@@ -1757,5 +1765,10 @@
 
   .spec-grid {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .sidebar-card {
+    border: 1px solid orange;
+    margin-top: -5vh;
   }
 }
