--- a/frontend/src/lists/styles.css
+++ b/frontend/src/lists/styles.css
@@ -2,13 +2,13 @@
   /* border: 1px solid orange; */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 30px;
-  padding: 2vh 0;
+  gap: 20px;
+  padding: 0;
 }
 .lookup-card {
   /* border: 1px solid orange; */
   height: 100%;
-  max-height: 650px;
+  max-height: 700px;
 }
 .lookup-card:nth-of-type(2) {
   /* border: 1px solid orange; */
