--- a/frontend/src/partials/styles.css
+++ b/frontend/src/partials/styles.css
@@ -165,7 +165,8 @@
   justify-content: flex-start;
   width: 100%;
   color: #6e6e6e;
-  font-size: 14px;
+  font-size: 16px;
+  height: 50px;
   box-shadow: none;
 }
 .popover-footer {
@@ -191,7 +192,8 @@
   cursor: default;
   width: 100%;
   color: #6e6e6e;
-  font-size: 14px;
+  font-size: 16px;
+  height: 40px;
 }
 
 /* Navbar Section/ component */
