--- a/frontend/src/website/steps/styles.css
+++ b/frontend/src/website/steps/styles.css
@@ -155,6 +155,11 @@ input[type="password"] {
 .welcome-btn2:hover {
   color: #fdb10e;
 }
+.profile-container {
+  /* border: 1px solid orange; */
+  margin-top: 0;
+  padding: 0;
+}
 
 /* Card Styles */
 .city-card,
