--- a/frontend/src/website/styles.css
+++ b/frontend/src/website/styles.css
@@ -270,7 +270,6 @@
   }
 
   .header-background {
-    /* border: 1px solid orange; */
     height: 90dvh;
   }
 
@@ -286,7 +285,7 @@
 /* Booking Page */
 .booking-container {
   /* border: 1px solid orange; */
-  padding: 120px 50px 0px 50px;
+  padding: 80px 50px 0px 50px;
   position: relative;
   height: 100vh;
   z-index: 0;
@@ -1252,7 +1251,7 @@
 .image-count-tag {
   /* border: 1px solid orange; */
   position: absolute;
-  left: 10px;
+  left: 20px;
   bottom: 10px;
   z-index: 1;
   display: flex;
@@ -1263,13 +1262,15 @@
 .availability-tag {
   /* border: 1px solid orange;     */
   position: absolute;
+  min-width: 150px;
   left: 0px;
   top: 4vh;
-  height: 35px;
+  height: 40px;
   padding: 0 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   z-index: 1;
   border-radius: 0 2rem 2rem 0;
   box-shadow: 0 4px 10px rgba(80, 80, 80, 0.4);
@@ -1416,7 +1417,6 @@
     border-radius: 8px 8px 0 0;
   }
 
-
   .map-container {
     border-radius: 8px;
   }
@@ -1531,7 +1531,6 @@
 }
 
 @media (max-width: 780px) {
-
   .wcu-container > h1,
   .hiw-container > h1 {
     margin-bottom: 10px !important;
@@ -1564,10 +1563,10 @@
   }
 }
 
-
 /* PropertyDetail Page */
 .property-detail-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: minmax(50%, 1fr) minmax(30%, 400px);
   /* max-width: clamp(1300px, 90%, 1600px); */
   width: 100%;
   max-width: 90%;
@@ -1577,7 +1576,8 @@
 }
 
 .breadcrumb {
-  margin-top: 10rem;
+  border: 1px solid orange;
+  margin-top: 15rem;
 }
 
 .main-content {
@@ -1641,27 +1641,38 @@
 
 .image-gallery {
   /* border: 1px solid red; */
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   border-radius: 4px;
+  width: 100%;
+  /* max-width: 50rem; */
+  height: 30rem;
+  position: relative;
 }
 
 .main-image {
   /* border: 1px solid orange; */
-  height: 28rem;
+  height: 100%;
+  width: 100%;
   border-radius: 4px;
+  object-fit: contain;
+  position: relative;
 }
 
 .main-image-card {
   /* border: 1px solid orange; */
   border-radius: 4px;
-  height: 28rem;
+  min-height: 30rem;
+  height: 100%;
+  max-height: 30rem;
+  position: relative;
+  object-fit: contain;
 }
 
-.main-image img {
+.main-image-card img {
+  /* border: 1px solid green; */
   width: 100%;
   height: 100%;
   border-radius: 4px;
-  margin-bottom: 15px;
 }
 
 .payment-image-logos {
@@ -1679,19 +1690,23 @@
 }
 
 .spec-grid {
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
   display: grid;
-  grid-template-columns: repeat(5, 6rem);
-  gap: 20px;
+  grid-template-columns: repeat(5, 4rem);
+  /* gap: 20px; */
   margin: 20px 0;
 }
 
 .spec-item {
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
   text-align: left;
-  padding: 15px;
+  padding: 5px 0;
   background: #f8f9fa;
   border-radius: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .amenities-grid {
@@ -1768,7 +1783,69 @@
   }
 
   .sidebar-card {
-    border: 1px solid orange;
+    /* border: 1px solid orange; */
     margin-top: -5vh;
   }
+}
+
+/* USer Profile page  */
+.profile-container {
+  /* border: 1px solid orange; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5vw;
+  padding: 6rem 0 0 0;
+}
+.profile-card-container {
+  /* border: 1px solid orange; */
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  padding: 0;
+}
+.profile-card {
+  /* border: 1px solid orange; */
+  width: 100%;
+  height: 100%;
+  min-height: 300px;
+  padding: 20px 30px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(145, 145, 145, 0.1);
+}
+
+.profile-card:nth-of-type(1) > div {
+  /* border: 1px solid orange; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 30px;
+}
+
+.profile-card > p {
+  /* border: 1px solid orange; */
+  color: #5e5e5e;
+  font-weight: 500;
+  font-size: 1rem;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.profile-card > span > p {
+  margin-left: 20px;
+  font-size: .9rem;
+}
+
+.profile-tabs {
+  /* border: 1px solid orange; */
+  width: 100%;
+  margin: 2vh 0 5vh 0;
+  padding: 20px 30px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(145, 145, 145, 0.1);
 }
